[package]
name = "rpc"
version = "0.1.0"
authors = ["AtsushiMiyazaki <miyazaki@eversystem.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.2.4"
ed25519-dalek = "1.0.0-pre.2"
bytes = "0.4.12"
grpcio = "0.4.7"
sha3 = "0.8.2"
rust-crypto = "0.2.36"
grpcio-compiler = "0.5.0-alpha.2"
log = "*"
env_logger = "*"
protobuf = "2.8.0"

[build-dependencies]
grpcio-compiler = "0.5.0-alpha.2"
which = "2.0.1"